AWSTemplateYamlFile.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  DevOps Multiplication Demo – Deploys a simple static web app on Apache via EC2.
  Demonstrates Infrastructure as Code for my Level 5 DevOps module.

Parameters:                                               
  InstanceType:
    Type: String
    Default: t2.micro                                     
    Description: EC2 instance type (t2.micro for free tier)
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName                      
    Description: Existing EC2 key pair for SSH access

Resources:
  WebServerSecurityGroup:   
    Type: AWS::EC2::SecurityGroup                         
    Properties:
      GroupDescription: Allow HTTP and SSH
      SecurityGroupIngress:
        - IpProtocol: tcp                                 
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp                                 
          FromPort: 22                                    
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name                                     
          Value: DevOpsSecurityGroup

  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType                    
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup                     
      KeyName: !Ref KeyName                               
      ImageId: ami-0c02fb55956c7d316  # Amazon Linux 2 (eu-west-1)  
      Tags:
        - Key: Name
          Value: DevOpsWebServer
      UserData: !Base64 |
        #!/bin/bash
        yum update -y


        yum install -y httpd wget


        systemctl enable httpd
        systemctl start httpd


        cd /var/www/html
        wget https://raw.githubusercontent.com/pjmc86/DevOpsMultiplication/main/MultiplicationApp.html -O index.html
        echo "<h3>Deployed automatically via CloudFormation - $(date)</h3>" >> index.html



Outputs:
  WebsiteURL:
    Description: Application URL
    Value: !Sub "http://${WebServer.PublicDnsName}/"
